Updated "Iishanten" condition in "tenpai" to show what cards are needed for "tenpai. Also, updated the justification for one type of cards that exceed 4.

--- a/default_config.json
+++ b/default_config.json
@@ -1,5 +1,5 @@
 {
-  "mode": "points",
+  "mode": "tenpai",
   "hand": "1m 1m 1m 2m 3m 4m 0m 6m 7m 8m 9m 9m 9m",
   "river": "9p 9p 9p",
   "points": {
